Net fixes (#69)